--- a/Faster5/app/src/main/res/layout/login_screen.xml
+++ b/Faster5/app/src/main/res/layout/login_screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/BackGround"
+    android:id="@+id/background"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:focusable="true"
@@ -9,23 +9,23 @@
     tools:context="com.example.gcs.faster5.MainActivity">
 
     <ImageView
-        android:id="@+id/textlogin"
+        android:id="@+id/image_textlogin"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerHorizontal="true" />
 
 
     <ImageView
-        android:id="@+id/roundrec"
+        android:id="@+id/image_roundrec"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_alignBottom="@+id/editText"
-        android:layout_alignTop="@+id/editText"
+        android:layout_alignBottom="@+id/text_edit"
+        android:layout_alignTop="@+id/text_edit"
         android:layout_centerHorizontal="true" />
 
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/text_edit"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -43,10 +43,10 @@
         android:textSize="25sp" />
 
     <ImageButton
-        android:id="@+id/playbutton"
+        android:id="@+id/button_play"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textlogin"
+        android:layout_alignBottom="@+id/image_textlogin"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="170dp"
         android:adjustViewBounds="true"
@@ -55,7 +55,7 @@
         android:src="@drawable/playbutton" />
 
     <com.facebook.login.widget.LoginButton
-        android:id="@+id/fbbutton"
+        android:id="@+id/button_fb"
         style="@style/FacebookLoginButton"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
         android:paddingTop="30dp" />
 
     <ImageView
-        android:id="@+id/connectfail"
+        android:id="@+id/image_connectfail"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
@@ -75,7 +75,7 @@
         android:layout_marginTop="150dp" />
 
     <ImageButton
-        android:id="@+id/tryagainButton"
+        android:id="@+id/button_tryagain"
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
