--- a/Faster5/app/src/main/res/layout/game_over.xml
+++ b/Faster5/app/src/main/res/layout/game_over.xml
@@ -6,14 +6,14 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/gameoverBg"
+        android:id="@+id/image_gameover"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/gameover" />
 
     <ImageButton
-        android:id="@+id/buttonOk"
+        android:id="@+id/button_ok"
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:layout_alignParentBottom="true"
@@ -24,7 +24,7 @@
         android:src="@drawable/okbutton" />
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/avatarUser1"
+        android:id="@+id/image_useravatar1"
         android:layout_width="85dp"
         android:layout_height="85dp"
         android:layout_marginLeft="60dp"
@@ -32,7 +32,7 @@
         android:src="@drawable/avatar" />
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/avatarUser2"
+        android:id="@+id/image_useravatar2"
         android:layout_width="85dp"
         android:layout_height="85dp"
         android:layout_alignParentRight="true"
@@ -41,18 +41,18 @@
         android:src="@drawable/avatar" />
 
     <TextView
-        android:id="@+id/userName1"
+        android:id="@+id/text_username1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="65dp"
         android:layout_marginTop="250dp"
         android:text="User Name1"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="bold"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/userName2"
+        android:id="@+id/text_username2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -60,47 +60,47 @@
         android:layout_marginTop="250dp"
         android:text="User Name2"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="bold"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/text_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="RESULT"
-        android:id="@+id/result"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="90dp"
+        android:text="RESULT"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#8ed63f"
         android:textSize="40sp"
-        android:textStyle="bold"
-        android:textColor="#8ed63f"/>
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/text_userscore1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="10"
-        android:id="@+id/scoreUser1"
-        android:layout_marginBottom="22dp"
-        android:layout_alignBottom="@+id/avatarUser1"
+        android:layout_alignBottom="@+id/image_useravatar1"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="22dp"
         android:layout_marginLeft="20dp"
         android:layout_marginStart="30dp"
-        android:textStyle="bold"/>
+        android:text="10"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/text_userscore2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="10"
-        android:id="@+id/scoreUser2"
-        android:layout_alignTop="@+id/scoreUser1"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/text_userscore1"
         android:layout_marginEnd="30dp"
-        android:textStyle="bold"/>
+        android:layout_marginRight="20dp"
+        android:text="10"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold" />
 
 </RelativeLayout>
