--- a/Faster5/app/src/main/res/layout/main_screen.xml
+++ b/Faster5/app/src/main/res/layout/main_screen.xml
@@ -11,7 +11,7 @@
     tools:context="com.example.gcs.faster5.MainActivity">
 
     <TextView
-        android:id="@+id/timeLeft"
+        android:id="@+id/text_timeleft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -22,10 +22,10 @@
         android:textSize="25sp"/>
 
     <TextView
-        android:id="@+id/timer"
+        android:id="@+id/text_timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/timeLeft"
+        android:layout_below="@+id/text_timeleft"
         android:layout_centerHorizontal="true"
         android:text="10"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -33,15 +33,15 @@
         android:textColor="#FF0000"/>
 
     <ImageView
-        android:id="@+id/troophy"
+        android:id="@+id/image_troophy"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/timer"
+        android:layout_below="@+id/text_timer"
         android:layout_centerHorizontal="true"
         android:src="@drawable/troophy" />
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/avatarUser1"
+        android:id="@+id/image_useravatar1"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/avatar"
@@ -51,7 +51,7 @@
         android:layout_marginLeft="20dp"/>
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/avatarUser2"
+        android:id="@+id/image_useravatar2"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="45dp"
@@ -62,7 +62,7 @@
         app:civ_border_width="2dp" />
 
     <TextView
-        android:id="@+id/noRound"
+        android:id="@+id/text_roundnumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -72,7 +72,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/question"
+        android:id="@+id/text_question"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
@@ -91,7 +91,7 @@
         android:layout_alignParentBottom="true"/>
 
     <TextView
-        android:id="@+id/userName1"
+        android:id="@+id/text_username1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -102,7 +102,7 @@
         android:layout_marginLeft="10dp"/>
 
     <TextView
-        android:id="@+id/userName2"
+        android:id="@+id/text_username2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
@@ -115,23 +115,23 @@
         />
 
     <TextView
-        android:id="@+id/scoreUser1"
+        android:id="@+id/text_userscore1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10"
+        android:text="0"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold"
         android:layout_marginTop="55dp"
         android:layout_marginLeft="80dp"/>
 
     <TextView
-        android:id="@+id/scoreUser2"
+        android:id="@+id/text_userscore2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="55dp"
         android:layout_marginRight="80dp"
         android:layout_alignParentRight="true"
-        android:text="10"
+        android:text="0"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold" />
 
