--- a/Faster5/app/src/main/res/layout/wellcome_screen.xml
+++ b/Faster5/app/src/main/res/layout/wellcome_screen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/BackGround"
+    android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,7 +11,7 @@
     tools:context="com.example.gcs.faster5.MainActivity">
 
     <ImageView
-        android:id="@+id/LoGo"
+        android:id="@+id/image_logo"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:src="@drawable/logo"
@@ -23,7 +23,7 @@
     <ImageButton
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:id="@+id/playbutton"
+        android:id="@+id/button_play"
         android:background="@null"
         android:adjustViewBounds="true"
         android:scaleType="centerInside"
