--- a/Faster5/app/src/main/res/layout/layout_answer_button.xml
+++ b/Faster5/app/src/main/res/layout/layout_answer_button.xml
@@ -1,31 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/button_ans1"
-        android:onClick="btnAnswerClick"
-        style="@style/ButtonAnswerStyle"
-        android:text="Answer1" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/button_ans2"
-        android:onClick="btnAnswerClick"
-        style="@style/ButtonAnswerStyle"
-        android:text="Answer2" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="4dp"
+            android:background="#FFF" />
 
-    <Button
-        android:id="@+id/button_ans3"
-        android:onClick="btnAnswerClick"
-        style="@style/ButtonAnswerStyle"
-        android:text="Answer3" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/button_ans4"
-        android:onClick="btnAnswerClick"
-        style="@style/ButtonAnswerStyle"
-        android:text="Answer4" />
+            <Button
+                android:id="@+id/button_ans1"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/answer0"
+                android:gravity="left|center_vertical"
+                android:onClick="btnAnswerClick"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:text="A: 1"
+                android:textColor="#FFF"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                />
+
+            <Button
+                android:id="@+id/button_ans2"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/answer0"
+                android:gravity="left|center_vertical"
+                android:onClick="btnAnswerClick"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:text="B: 2"
+                android:textColor="#FFF"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="4dp"
+            android:background="#FFF" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/button_ans3"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/answer0"
+                android:gravity="left|center_vertical"
+                android:onClick="btnAnswerClick"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:text="C: 3"
+                android:textColor="#FFF"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
+
+            <Button
+                android:id="@+id/button_ans4"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/answer0"
+                android:gravity="left|center_vertical"
+                android:onClick="btnAnswerClick"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:text="D: 4"
+                android:textColor="#FFF"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
+        </LinearLayout>
+
+    </FrameLayout>
+
 </LinearLayout>
