--- a/Faster5/app/src/main/res/layout/main_screen.xml
+++ b/Faster5/app/src/main/res/layout/main_screen.xml
@@ -1,140 +1,239 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/background"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:orientation="vertical"
     tools:context=".ui.activity.MainActivity">
 
-    <TextView
-        android:id="@+id/text_timeleft"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="TIME LEFT"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="bold"
-        android:textSize="25sp"/>
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imageview_useravatar1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/avatar" />
+
+            <TextView
+                android:id="@+id/textview_username1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/imageview_useravatar1"
+                android:layout_marginLeft="5dp"
+                android:layout_toEndOf="@+id/imageview_useravatar1"
+                android:layout_toRightOf="@+id/imageview_useravatar1"
+                android:ellipsize="end"
+                android:lines="1"
+                android:text="PLAYER"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textview_city_user1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/textview_username1"
+                android:layout_alignStart="@+id/textview_username1"
+                android:layout_below="@+id/textview_username1"
+                android:ellipsize="end"
+                android:lines="1"
+                android:text="CITY"
+                android:textColor="#ffffff"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textview_money1"
+                android:layout_width="160dp"
+                android:layout_height="45dp"
+                android:layout_alignLeft="@+id/imageview_useravatar1"
+                android:layout_alignStart="@+id/imageview_useravatar1"
+                android:layout_below="@+id/imageview_useravatar1"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/button_money"
+                android:gravity="center_horizontal"
+                android:paddingTop="9dp"
+                android:text="000.000.000"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imageview_useravatar2"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/avatar" />
+
+            <TextView
+                android:id="@+id/textview_username2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/imageview_useravatar2"
+                android:layout_marginRight="5dp"
+                android:layout_toLeftOf="@+id/imageview_useravatar2"
+                android:ellipsize="end"
+                android:lines="1"
+                android:text="PLAYER"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textview_city_user2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignRight="@+id/textview_username2"
+                android:layout_below="@+id/textview_username2"
+                android:ellipsize="end"
+                android:lines="1"
+                android:text="CITY"
+                android:textColor="#ffffff"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textview_money2"
+                android:layout_width="160dp"
+                android:layout_height="45dp"
+                android:layout_alignRight="@+id/imageview_useravatar2"
+                android:layout_below="@+id/imageview_useravatar2"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/button_money2"
+                android:gravity="center_horizontal"
+                android:paddingTop="9dp"
+                android:text="000.000.000"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+            />
+        </RelativeLayout>
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/text_timer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/text_timeleft"
-        android:layout_centerHorizontal="true"
-        android:text="10"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="bold"
-        android:textColor="#FF0000"/>
-
-    <ImageView
-        android:id="@+id/image_troophy"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/text_timer"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/troophy" />
-
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/image_useravatar1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/avatar"
-        app:civ_border_color="#000000"
-        app:civ_border_width="2dp"
-        android:layout_marginTop="45dp"
-        android:layout_marginLeft="20dp"/>
-
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/image_useravatar2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="45dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="20dp"
-        android:src="@drawable/avatar"
-        app:civ_border_color="#000000"
-        app:civ_border_width="2dp" />
-
-    <TextView
-        android:id="@+id/text_roundnumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="130dp"
-        android:text="ROUND 1 OF 5"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/textview_timer"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:background="@drawable/clock"
+        android:gravity="center_horizontal|center_vertical"
+        android:paddingBottom="5dp"
+        android:paddingRight="2dp"
+        android:text="TIME OUT"
+        android:textColor="#FFF"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/text_question"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="180dp"
-        android:background="@drawable/actionbar"
-        android:text="1 + 4 -3 + 4 - 9 = ?"
-        android:gravity="center"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="bold"
-        android:textSize="30sp"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
+
+        <Button
+            android:id="@+id/button_save1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="20dp"
+            android:layout_toLeftOf="@+id/button_save2"
+            android:background="@drawable/save1" />
+
+        <Button
+            android:id="@+id/button_save2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/save2" />
+
+        <Button
+            android:id="@+id/button_save3"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@+id/button_save2"
+            android:background="@drawable/save3" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:id="@+id/textview_tablequestion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:background="@drawable/table_question"
+            android:gravity="center_horizontal|center_vertical"
+            android:paddingBottom="15dp"
+            android:text="Một con vịt có mấy chân?"
+            android:textColor="#FFF"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textview_moneyquestion"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:background="@drawable/money_question"
+            android:gravity="center_horizontal|center_vertical"
+            android:paddingBottom="5dp"
+            android:text="100.000.000"
+            android:textColor="#FFF"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textview_numberquestion"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignLeft="@+id/textview_moneyquestion"
+            android:layout_alignTop="@+id/textview_moneyquestion"
+            android:background="@drawable/number_question"
+            android:gravity="center_horizontal|center_vertical"
+            android:paddingBottom="5dp"
+            android:paddingRight="4dp"
+            android:text="1"
+            android:textColor="#FFF"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
     <include
         layout="@layout/layout_answer_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"/>
-
-    <TextView
-        android:id="@+id/text_username1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="15sp"
-        android:text="User name1"
-        android:textStyle="bold"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="10dp"/>
-
-    <TextView
-        android:id="@+id/text_username2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-        android:text="User name2"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        />
-
-    <TextView
-        android:id="@+id/text_userscore1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="bold"
-        android:layout_marginTop="55dp"
-        android:layout_marginLeft="80dp"/>
-
-    <TextView
-        android:id="@+id/text_userscore2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
-        android:layout_marginRight="80dp"
-        android:layout_alignParentRight="true"
-        android:text="0"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="bold" />
-
-
-</RelativeLayout>
+        android:layout_height="wrap_content" />
+</LinearLayout>
 
