--- a/Faster5/app/src/main/res/layout/login_screen.xml
+++ b/Faster5/app/src/main/res/layout/login_screen.xml
@@ -146,7 +146,9 @@
 
         <Button
             android:id="@+id/button_login"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
+            android:layout_marginRight="110dp"
+            android:layout_marginLeft="110dp"
             android:layout_height="40dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
