--- a/Faster5/app/src/main/res/layout/game_over.xml
+++ b/Faster5/app/src/main/res/layout/game_over.xml
@@ -1,106 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/image_gameover"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/gameover_icon" />
+
+    <TextView
+        android:id="@+id/textview_chucmung"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:text="CHÚC MỪNG CHIẾN THẮNG"
+        android:textColor="#fff"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/gameover" />
-
-    <ImageButton
-        android:id="@+id/button_ok"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="130dp"
-        android:background="@null"
-        android:scaleType="centerInside"
-        android:src="@drawable/okbutton" />
-
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/image_useravatar1"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="158dp"
-        android:src="@drawable/avatar" />
-
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/image_useravatar2"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="60dp"
-        android:layout_marginTop="157dp"
-        android:src="@drawable/avatar" />
-
-    <TextView
-        android:id="@+id/text_username1"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="65dp"
-        android:layout_marginTop="250dp"
-        android:text="User Name1"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="15sp"
-        android:textStyle="bold" />
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp">
 
-    <TextView
-        android:id="@+id/text_username2"
-        android:layout_width="wrap_content"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imageview_useravatarwin"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:src="@drawable/avatar" />
+
+        <TextView
+            android:id="@+id/textview_usernnamewin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/imageview_useravatarwin"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_toEndOf="@+id/imageview_useravatarwin"
+            android:layout_toRightOf="@+id/imageview_useravatarwin"
+            android:ellipsize="end"
+            android:lines="1"
+            android:text="PLAYER"
+            android:textColor="#ffffff"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textview_city_win"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textview_usernnamewin"
+            android:layout_alignStart="@+id/textview_usernnamewin"
+            android:layout_below="@+id/textview_usernnamewin"
+            android:ellipsize="end"
+            android:lines="1"
+            android:text="CITY"
+            android:textColor="#ffffff"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/textview_money_win"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_below="@+id/imageview_useravatarwin"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_money"
+            android:foregroundGravity="center"
+            android:gravity="center_horizontal"
+            android:paddingTop="11dp"
+            android:text="000.000.000"
+            android:textColor="#000000"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="65dp"
-        android:layout_marginTop="250dp"
-        android:text="User Name2"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="15sp"
-        android:textStyle="bold" />
+        android:layout_below="@+id/layout_city_win"
+        android:layout_marginTop="30dp">
 
-    <TextView
-        android:id="@+id/text_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"
-        android:text="RESULT"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#8ed63f"
-        android:textSize="40sp"
-        android:textStyle="bold" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_centerVertical="true"
+            android:background="#FFF" />
 
-    <TextView
-        android:id="@+id/text_userscore1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/image_useravatar1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="22dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="30dp"
-        android:text="10"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/button_backhome"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="100dp"
+            android:layout_marginRight="100dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/button_login"
+            android:gravity="center"
+            android:paddingBottom="10dp"
+            android:text="TIẾP TỤC"
+            android:textAllCaps="false"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
-    <TextView
-        android:id="@+id/text_userscore2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/text_userscore1"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="20dp"
-        android:text="10"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="bold" />
 
-</RelativeLayout>
+</LinearLayout>
