--- a/Faster5/app/src/main/res/layout/layout_button_player.xml
+++ b/Faster5/app/src/main/res/layout/layout_button_player.xml
@@ -8,7 +8,8 @@
     <FrameLayout
         android:id="@+id/layout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp">
 
         <View
             android:layout_width="match_parent"
@@ -20,11 +21,11 @@
         <Button
             android:id="@+id/button_player"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:background="@drawable/button_player"
-            android:paddingBottom="10dp"
+            android:paddingBottom="8dp"
             android:text="Người chơi"
             android:textColor="#FFF"/>
     </FrameLayout>
