--- a/Faster5/app/src/main/res/layout/info_screen.xml
+++ b/Faster5/app/src/main/res/layout/info_screen.xml
@@ -78,16 +78,23 @@
 
         </RelativeLayout>
 
-
-        <Button
+        <RelativeLayout
             android:id="@+id/button_search"
-            android:layout_width="120dp"
+            android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="5dp"
-            android:layout_marginTop="40dp"
-            android:background="@drawable/button_search"
-            android:clickable="false" />
+            android:layout_marginTop="40dp">
+
+            <ImageView
+                android:layout_width="28dp"
+                android:layout_height="25dp"
+                android:background="@drawable/icon_search"
+                android:layout_gravity="center"
+                android:layout_centerInParent="true"
+                android:scaleType="fitXY"/>
+        </RelativeLayout>
+
     </LinearLayout>
 
     <ImageView
