--- a/Faster5/app/src/main/res/layout/game_over.xml
+++ b/Faster5/app/src/main/res/layout/game_over.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/gameover_icon" />
 
     <TextView
-        android:id="@+id/textview_chucmung"
+        android:id="@+id/textview_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -114,7 +114,8 @@
             android:textAllCaps="false"
             android:textColor="#ffffff"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:onClick="backInfo"/>
     </FrameLayout>
 
 
