--- a/Faster5/app/src/main/res/layout/layout_answer_button.xml
+++ b/Faster5/app/src/main/res/layout/layout_answer_button.xml
@@ -32,6 +32,7 @@
                 android:onClick="btnAnswerClick"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
+                android:paddingRight="20dp"
                 android:singleLine="true"
                 android:text="A: 1Kien"
                 android:textAllCaps="false"
@@ -49,6 +50,7 @@
                 android:onClick="btnAnswerClick"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
+                android:paddingRight="20dp"
                 android:singleLine="true"
                 android:text="B: 2"
                 android:textAllCaps="false"
@@ -86,8 +88,9 @@
                 android:onClick="btnAnswerClick"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
+                android:paddingRight="20dp"
                 android:singleLine="true"
-                android:text="C: 3 hel2222222lo"
+                android:text="C: 3 hel2222222l2222222o"
                 android:textAllCaps="false"
                 android:textColor="#FFF"
                 android:textSize="18sp" />
@@ -103,6 +106,7 @@
                 android:onClick="btnAnswerClick"
                 android:paddingBottom="10dp"
                 android:paddingLeft="20dp"
+                android:paddingRight="20dp"
                 android:singleLine="true"
                 android:text="D: 4"
                 android:textAllCaps="false"
