Them am thanh 15/9/2016

--- a/Faster5/app/src/main/res/drawable/xml_btn_anim.xml
+++ b/Faster5/app/src/main/res/drawable/xml_btn_anim.xml
@@ -10,4 +10,5 @@
     <item android:drawable="@drawable/answer_right" android:duration="200" />
     <item android:drawable="@drawable/answer0" android:duration="200" />
     <item android:drawable="@drawable/answer_right" android:duration="200" />
+    <item android:drawable="@drawable/answer_right" android:duration="200" />
 </animation-list>
