--- a/Faster5/app/src/main/res/layout/layout_popup_connection.xml
+++ b/Faster5/app/src/main/res/layout/layout_popup_connection.xml
@@ -9,9 +9,9 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginLeft="40dp"
-        android:gravity="center"
         android:layout_marginRight="40dp"
         android:background="@drawable/xml_popup_bg_white"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
@@ -21,22 +21,37 @@
             android:layout_marginTop="20dp"
             android:src="@drawable/button_erro" />
 
-        <Button
-            android:id="@+id/btn_tryagain"
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="30dp"
-            android:layout_marginLeft="80dp"
-            android:layout_marginRight="80dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/answer0"
-            android:gravity="center"
-            android:paddingBottom="10dp"
-            android:text="Thử Lại"
-            android:textAllCaps="false"
-            android:textColor="#ffffff"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginBottom="3dp"
+                android:background="#00366D" />
+
+            <Button
+                android:id="@+id/btn_tryagain"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="80dp"
+                android:layout_marginRight="80dp"
+                android:background="@drawable/answer0"
+                android:gravity="center"
+                android:paddingBottom="10dp"
+                android:text="Thử Lại"
+                android:textAllCaps="false"
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </FrameLayout>
+
 
     </LinearLayout>
 </RelativeLayout>
